# self-improving-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  (+266 more)
.mypy_cache/3.11/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.11/PIL/: ExifTags.data.json  ExifTags.meta.json  GifImagePlugin.data.json  GifImagePlugin.meta.json  GimpGradientFile.data.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  Image.data.json  Image.meta.json  ImageChops.data.json  ImageChops.meta.json  ImageCms.data.json  (+55 more)
.streamlit/: config.toml
src/: agent_flows.py  app.py  test.py
src/self_improving_rag/: __init__.py
(+2524 files in other folders)
